evaluacion_conjunta/kubernetes/sistema-agricola/1-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: sistema-agricola
  labels:
    name: sistema-agricola
